@@ -31,6 +31,9 @@
  * Fixed bug; A gene's human readable reference sequence can now actually be
    clicked and opened from the gene home page.
  * Improved PubMed custom link help text.
+ * Implemented the new dropdown menu at the variant's detailed view, instead of
+   one long row of links. Also included links to the UCSC and Ensembl genome
+   browsers from the dropdown menu.
 
 
 
